<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/results">

    <fragment
        android:id="@+id/spiral_contact"
        android:name="com.kou.promilling.calcs.spiralcontactcalc.SpiralContactFragment"
        android:label="@string/spiral_contact_menu_title"
        tools:layout="@layout/fragment_spiral_contact">
        <argument
            android:name="item"
            app:argType="com.kou.promilling.database.ResultItem"
            app:nullable="true"
            android:defaultValue="@null"/>
        <action
            android:id="@+id/action_spiral_contact_to_spiralContactDescriptionFragment"
            app:destination="@id/spiralContactDescriptionFragment" />
    </fragment>
    <fragment
        android:id="@+id/cutting_width"
        android:name="com.kou.promilling.calcs.cuttingwidthcalc.CuttingWidthFragment"
        android:label="@string/cutting_width_menu_title"
        tools:layout="@layout/fragment_cutting_width">
        <argument
            android:name="item"
            app:argType="com.kou.promilling.database.ResultItem"
            app:nullable="true"
            android:defaultValue="@null"/>
        <action
            android:id="@+id/action_cutting_width_to_cuttingWidthDescriptionFragment"
            app:destination="@id/cuttingWidthDescriptionFragment" />
    </fragment>
    <fragment
        android:id="@+id/trochoid_width"
        android:name="com.kou.promilling.calcs.trochoidwidthcalc.TrochoidWidthFragment"
        android:label="@string/trochoid_width_menu_title"
        tools:layout="@layout/fragment_trochoid_width">
        <argument
            android:name="item"
            app:argType="com.kou.promilling.database.ResultItem"
            app:nullable="true"
            android:defaultValue="@null"/>
        <action
            android:id="@+id/action_trochoid_width_to_trochoidWidthDescriptionFragment"
            app:destination="@id/trochoidWidthDescriptionFragment" />
    </fragment>
    <fragment
        android:id="@+id/results"
        android:name="com.kou.promilling.results.ResultsFragment"
        android:label="@string/calculations_list_menu_title">
        <action
            android:id="@+id/action_results_to_spiralContactDetailFragment"
            app:destination="@id/spiralContactDetailFragment" />
        <action
            android:id="@+id/action_results_to_cuttingWidthDetailFragment"
            app:destination="@id/cuttingWidthDetailFragment" />
        <action
            android:id="@+id/action_results_to_trochoidWidthDetailFragment"
            app:destination="@id/trochoidWidthDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/cuttingWidthDetailFragment"
        android:name="com.kou.promilling.details.cuttingwidthdetail.CuttingWidthDetailFragment"
        android:label="@string/cutting_width_menu_title">
        <action
            android:id="@+id/action_cuttingWidthDetailFragment_to_cutting_width2"
            app:destination="@id/cutting_width"
            app:popUpTo="@id/results"
            app:popUpToInclusive="true" />
        <argument
            android:name="item"
            app:argType="com.kou.promilling.database.ResultItem" />
        <action
            android:id="@+id/action_cuttingWidthDetailFragment_to_results"
            app:destination="@id/results"
            app:popUpTo="@id/results"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/trochoidWidthDetailFragment"
        android:name="com.kou.promilling.details.trochoidwidthdetail.TrochoidWidthDetailFragment"
        android:label="@string/trochoid_width_menu_title">
        <action
            android:id="@+id/action_trochoidWidthDetailFragment_to_trochoid_width2"
            app:destination="@id/trochoid_width"
            app:popUpTo="@id/results"
            app:popUpToInclusive="true" />
        <argument
            android:name="item"
            app:argType="com.kou.promilling.database.ResultItem" />
        <action
            android:id="@+id/action_trochoidWidthDetailFragment_to_results"
            app:destination="@id/results"
            app:popUpTo="@id/results"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/spiralContactDetailFragment"
        android:name="com.kou.promilling.details.spiralcontactdetail.SpiralContactDetailFragment"
        android:label="@string/spiral_contact_menu_title">
        <action
            android:id="@+id/action_spiralContactDetailFragment_to_spiral_contact2"
            app:destination="@id/spiral_contact"
            app:popUpTo="@id/results"
            app:popUpToInclusive="true" />
        <argument
            android:name="item"
            app:argType="com.kou.promilling.database.ResultItem" />
        <action
            android:id="@+id/action_spiralContactDetailFragment_to_results"
            app:destination="@id/results"
            app:popUpTo="@id/results"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/spiralContactDescriptionFragment"
        android:name="com.kou.promilling.descriptions.spiralcontactdescription.SpiralContactDescriptionFragment"
        android:label="@string/calculator_description_screen_label" />
    <fragment
        android:id="@+id/cuttingWidthDescriptionFragment"
        android:name="com.kou.promilling.descriptions.cuttingwidthdescription.CuttingWidthDescriptionFragment"
        android:label="@string/calculator_description_screen_label" />
    <fragment
        android:id="@+id/trochoidWidthDescriptionFragment"
        android:name="com.kou.promilling.descriptions.trochoidwidthdescription.TrochoidWidthDescriptionFragment"
        android:label="@string/calculator_description_screen_label" />
</navigation>