<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.kou.promilling.cuttingwidthcalc.CuttingWidthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".cuttingwidthcalc.CuttingWidthFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:fontFamily="@font/roboto_light"
            android:textSize="@dimen/text_size_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="123456" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            app:dividerInsetStart="@dimen/margin_default"
            app:dividerInsetEnd="@dimen/margin_default"
            app:layout_constraintTop_toBottomOf="@+id/text_view_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tool_radius"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_rounding_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_path_rouding_radius"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_radius">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_rounding_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_cutting_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cutting_width"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_rounding_radius">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_cutting_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>