<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.kou.promilling.Converter" />

        <variable
            name="viewModel"
            type="com.kou.promilling.trochoidwidthcalc.TrochoidWidthViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".trochoidwidthcalc.TrochoidWidthFragment">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@{viewModel.result}"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="123456" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    app:dividerInsetEnd="@dimen/margin_default"
                    app:dividerInsetStart="@dimen/margin_default"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_result" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_radius"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:hint="@string/hint_tool_radius"
                    app:layout_constraintTop_toBottomOf="@+id/divider">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_radius"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@={Converter.doubleToString(textInputRadius, viewModel.radius, viewModel.radius)}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_rounding_radius"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:hint="@string/hint_path_rouding_radius"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_radius">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_rounding_radius"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@={Converter.doubleToString(textInputRoundingRadius, viewModel.roundingRadius, viewModel.roundingRadius)}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_trochoid_step"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:hint="@string/hint_trochoid_step"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_rounding_radius">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_trochoid_step"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@={Converter.doubleToString(textInputTrochoidStep, viewModel.trochoidStep, viewModel.trochoidStep)}" />

                </com.google.android.material.textfield.TextInputLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/button_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:onClick="@{viewModel::result}"
            android:text="@string/button_result_text"
            app:elevation="12dp"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>